<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" android:orientation="horizontal"
    android:baselineAligned="false">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/uiCurrUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/uiOrderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:text="@string/pizza599"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ui599PizzaButton">
            </Button>
            <Button
                android:text="@string/pizza699"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ui699PizzaButton">
            </Button>
            <Button
                android:text="@string/pizza799"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ui799PizzaButton">
            </Button>
            <Button
                android:text="@string/pizzamaker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uiPizzaMakerButton">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:text="Button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="Button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:text="@string/orderType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uiOrderTypeButton">
            </Button>
            <Button
                android:text="@string/payString"
                android:background="#B3D7AE"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uiPayButton">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>